# tool_explorer

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  luigi.cfg  main.py  pyproject.toml  setup.py
CI/: .travis.yml  circleci.yml
config/: logging.json
docs/: Makefile  conf.py  index.rst  make.bat
scripts/: initialise.sh
src/: learning_pipline.py  main.py
src/data/: data_services.py
src/evaluation/: evaluation_services.py  evaluation_shared_functions.py
src/features/: feature_services.py
src/models/: model_services.py
src/module_1/: model_task_1.py  module_task_1.py
src/module_2/: module_task_1.py
src/utilities/: dataframe_utils.py  dictionary_utils.py  file_in_out.py
src/utils/: dataframe.py  decorators.py  io.py  list.py  logger.py
utils/: decorators.py  logger.py
