[project]
name = "tool-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.25.2",
    "scipy==1.15.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "plotly>=6.0.0",
    "pytest>=8.3.5",
]
