[project]
name = "tool-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.2.3",
    "polars>=1.25.2",
    "pydantic>=2.10.6",
    "scipy==1.15.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"



[dependency-groups]
dev = [
    "plotly>=6.0.0",
    "pytest>=8.3.5",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "CI", "logs"]
